Iniciando Modulo Financeiro

--- a/app/views/financeiro/index.html.erb
+++ b/app/views/financeiro/index.html.erb
@@ -1,2 +1,3 @@
-<h1>Financeiro#index</h1>
-<p>Find me in app/views/financeiro/index.html.erb</p>
+<h1>Financeiro</h1>
+<p>Holá</p>
+<%= link_to "Novo pagamento", novo_pagamento_path %>
