--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,15 +2,22 @@
 <html>
 <head>
   <title><%= yield :title %></title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body id="bodyInternas">
 	<%= render "shared/header" %>
     <%= render "shared/flash_messages" %>
 
-	<%= yield %>
+        <!-- CONTENT -->
+        <div id="contentInternas">
+            <div class="wrapperInternas">
+                <%= yield %>
+            </div>
+        </div>
+        <!-- / CONTENT -->
 
 </body>
 </html>
