--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing user</h1>
+<!-- TITLE -->
+<% content_for :title do %> Editar Usuario - Sistema Grupo Vida, Amor e Riso! <% end %>
+<!-- / TITLE -->
+
+<h1>Editar usuarios</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
