--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,29 +11,52 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :login %><br />
-    <%= f.text_field :login %>
-  </div>
-  <div class="field">
-    <%= f.label :password %><br />
-    <%= f.password_field :password %>
-  </div>
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.text_field :email %>
-  </div>
-  <% if current_user.have_role? :admin %>
-    <% roles.each do |role|%>
-      <%= check_box_tag "user[role_ids][]",role.id, @user.have_role?(role.name) %>
-      <%= role.name %><br />
-    <% end %>
-  <% end %>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+<ul>
+    <li>
+        <label>
+            <span>Login:</span><br/>
+            <%= f.text_field :login, :class => "inputMedio input" %>
+        </label>
+    </li>
+
+    <li>
+        <label>
+            <span>Password:</span><br/>
+            <%= f.password_field :password, :class => "inputMedio input" %>
+        </label>
+    </li>
+
+    <li>
+        <label>
+            <span>Nome:</span><br/>
+            <%= f.text_field :name, :class => "inputMedio input" %>
+        </label>
+    </li>
+
+    <li>
+        <label>
+            <span>E-mail:</span><br/>
+            <%= f.text_field :email, :class => "inputMedio input" %>
+        </label>
+    </li>
+
+    <li>
+        <div id="guardaCheckbox">
+            <label>Modulos de acesso:</label>
+            <% if current_user.have_role? :admin %>
+                <% roles.each do |role|%>
+                    <label>
+                    <%= check_box_tag "user[role_ids][]",role.id, @user.have_role?(role.name) %>
+                    <span><%= role.name %><span>
+                    </label>
+                <% end %>
+            <% end %>
+        </div>
+    </li>
+
+    <li id="btEnviarForm">
+        <%= f.submit %>
+        <%= link_to 'Voltar', users_path, :id => "btVoltarExcluirForm" %>
+    </li>
+</ul>
 <% end %>
