--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New user</h1>
+<!-- TITLE -->
+<% content_for :title do %> Novo Usuario - Sistema Grupo Vida, Amor e Riso! <% end %>
+<!-- / TITLE -->
+
+<h1>Novo usuario</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', users_path %>
