Template home dos modulo

--- a/app/views/financeiro/index.html.erb
+++ b/app/views/financeiro/index.html.erb
@@ -1,3 +1,3 @@
 <h1>Financeiro</h1>
-<p>Holá</p>
-<%= link_to "Novo pagamento", novo_pagamento_path %>
+
+<%= link_to "Novo pagamento", novo_pagamento_path, class: "btEnviarForm" %>
