--- a/app/views/financeiro/novo_pagamento.html.erb
+++ b/app/views/financeiro/novo_pagamento.html.erb
@@ -86,7 +86,7 @@
   <%= r.label :description %>
   <%= r.text_area :description %><br />
 
-  <%= r.submit 'Salvar Pagamento' %>
+  <%= r.submit 'Salvar Pagamento', :id => "btEnviarForm" %>
 
 <% end %>
 
