--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -56,7 +56,7 @@
 
     <li id="btEnviarForm">
         <%= f.submit %>
-        <%= link_to 'Voltar', users_path, :id => "btVoltarExcluirForm" %>
+        <%= link_to 'Voltar', users_path, :id => "btVoltarForm" %>
     </li>
 </ul>
 <% end %>
