--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,6 +36,60 @@ iframe{
 	background:#dedede;
 }
 
+/* PADROES */
+#contentInternas a.btEnviarForm,
+#contentInternas .btEnviarForm input,
+#contentInternas a#btEnviarForm,
+#contentInternas #btEnviarForm input{
+    float:left;
+    padding:4px 10px;
+    background:#24c803;
+    border:1px solid #1a9203;
+    color:#fff;
+    text-decoration:none;
+}
+
+#contentInternas .btVoltarForm,
+#contentInternas #btVoltarForm{
+    float:left;
+    padding:4px 10px;
+    background:#ffd801;
+    border:1px solid #b39800;
+    display:inline;
+    margin:0px 5px;
+    text-decoration:none;
+    font-size:13px;
+    color:#000;
+}
+
+#contentInternas .btVoltarExcluirForm,
+#contentInternas #btVoltarExcluirForm{
+    float:left;
+    padding:4px 10px;
+    background:#f30808;
+    border:1px solid #a50808;
+    display:inline;
+    margin:0px 5px;
+    text-decoration:none;
+    font-size:13px;
+    color:#fff;
+}
+
+
+#contentInternas .btEditarForm,
+#contentInternas #btEditarForm{
+    float:left;
+    padding:4px 10px;
+    background:#150278;
+    border:1px solid #0e0345;
+    display:inline;
+    margin:0px 5px;
+    text-decoration:none;
+    font-size:13px;
+    color:#fff;
+}
+/* / PADROES */
+
 #geralLogin #centralizaLogin{
 	width:364px;
 	margin:0 auto;
@@ -312,10 +366,15 @@ margin:0px 10px;
     padding:20px 0px 0px 0px;
 }
 
+#contentInternas #guardaPesquisa{
+    float:left;
+    width:550px;
+}
+
 #contentInternas h1{
     float:left;
-    width:100%;
-    padding:0px 0px 20px 0px;
+    width:550px;
+    padding:0px 0px 40px 0px;
 }
 
 #contentInternas ul{
@@ -355,40 +414,79 @@ margin:0px 10px;
     text-transform: capitalize;
 }
 
-#contentInternas a.btEnviarForm,
-#contentInternas .btEnviarForm input,
-#contentInternas a#btEnviarForm,
-#contentInternas #btEnviarForm input{
+#contentInternas .noPaddingHomes{ padding-bottom:5px; }
+
+#contentInternas .liPesquisaAvancada{ padding-left:316px; }
+
+#contentInternas .pesquisaAvancada{
     float:left;
-    padding:4px 10px;
-    background:#24c803;
-    border:1px solid #1a9203;
-    color:#fff;
+    font-size:12px;
+    display:inline;
+    margin:5px 10px 0px 0px;
     text-decoration:none;
+    color:#150278;
 }
 
-#contentInternas .btVoltarForm,
-#contentInternas #btVoltarForm{
-    float:left;
-    padding:4px 10px;
-    background:#8cb1c3;
-    border:1px solid #0a5d87;
-    display:inline;
-    margin:0px 5px;
-    text-decoration:none;
-    font-size:13px;
-    color:#000;
+#contentInternas #guardaAtividadesRecentes{
+    float:right;
+    width:340px;
+    position:relative;
+    top:-60px;
+    border-left:2px solid #ccc;
+    padding:0px 0px 10px 30px;
+    height:180px;
+    overflow:hidden;
 }
 
-#contentInternas .btVoltarExcluirForm,
-#contentInternas #btVoltarExcluirForm{
+#contentInternas #guardaAtividadesRecentes h2{
     float:left;
-    padding:4px 10px;
-    background:#f30808;
-    border:1px solid #a50808;
-    display:inline;
-    margin:0px 5px;
-    text-decoration:none;
-    font-size:13px;
-    color:#fff;
+    width:340px;
+    padding:0px 0px 20px 0px;
+}
+
+#contentInternas #guardaAtividadesRecentes p{
+    float:left;
+    width:300px;
+    padding:0px 0px 10px 0px;
+    font-size:14px;
+}
+
+#contentInternas #guardaAtividadesRecentes p span{ float:left; }
+
+#contentInternas #guardaAtividadesRecentes p a{ float:right; }
+
+#contentInternas #guardaResultadoPesquisa{
+    float:left;
+    width:100%;
+}
+
+#contentInternas #guardaResultadoPesquisa h2{
+    float:left;
+    padding:0px 0px 10px 0px;
+}
+
+#contentInternas #guardaResultadoPesquisa table{
+    float:left;
+    width:100%;
+    border:1px solid #008d9e;
+}
+
+#contentInternas #guardaResultadoPesquisa table th{
+    background:#00cde5;
+    padding:5px 0px;
+}
+
+#contentInternas #guardaResultadoPesquisa table tr td{
+    text-align:left;
+    padding:5px 0px;
+    border-top:1px solid #008d9e;
+}
+
+#contentInternas #guardaResultadoPesquisa table span{
+    float:left;
+    padding:3px 0px 3px 5px;
+}
+
+#contentInternas #guardaResultadoPesquisa table span.centralizaBts{
+    padding-left:50px;
 }
