--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -29,7 +29,7 @@
     </ul>
   <% end %>
 
-<%= link_to '+ Novo usuario', new_user_path, class: "btEnviarForm" %>
+<%= link_to 'Novo usuario', new_user_path, class: "btEnviarForm" %>
 
 </div>
 
