--- a/app/views/financeiro/index.html.erb
+++ b/app/views/financeiro/index.html.erb
@@ -1,3 +1,72 @@
+<!-- TITLE -->
+<% content_for :title do %> Financeiro - Sistema Grupo Vida, Amor e Riso! <% end %>
+<!-- / TITLE -->
+
 <h1>Financeiro</h1>
 
+<div id="guardaPesquisa">
+  <%= form_for(@release = '') do |f| %>
+    <ul>
+      <li class="escondidoPesquisaAvancada">
+        <label for="campoNome">Nome</label>
+        <%= f.text_field :login, :class => "inputGde input", :id => 'campoNome' %>
+      </li>
+      
+      <li class="escondidoPesquisaAvancada">
+        <label for="campoNome">Login</label>
+        <%= f.text_field :login, :class => "inputGde input", :id => 'campoNome' %>
+      </li>
+
+      <li class="noPaddingHomes">
+        <label for="campoNome" class="escondidoPesquisaAvancada">E-mail</label>
+        <%= f.text_field :login, :class => "inputGde input", :id => 'campoNome' %>
+      </li>
+
+      <li class="liPesquisaAvancada">
+        <%= link_to 'Pesquisa avancada', 'javascript:void(0);', :class => 'pesquisaAvancada', :id => 'btPesquisaAvancada' %>
+        <%= f.submit 'Pesquisar', :class => 'btEditarForm', :id => 'btRealizarPesquisa' %>
+      </li>
+    </ul>
+  <% end %>
+
 <%= link_to "Novo pagamento", novo_pagamento_path, class: "btEnviarForm" %>
+
+</div>
+
+<div id="guardaAtividadesRecentes">
+  <h2>Ultimos usuarios</h2>
+  <!-- < @release.each do |user| %>
+    <p>
+      <span>< user.name %></span> 
+      < link_to 'Visualizar', edit_user_path(user), :class => 'btVoltarForm' %>
+    </p>
+  < end %> -->
+</div>
+
+<div id="guardaResultadoPesquisa">
+  <h2>Resultado da pesquisa</h2>
+
+  <table cellspadding="0" cellspacing="0" width="100%">
+    <tr border="0">
+      <th width="20%"><span>Usuario</span></th>
+      <th width="20%"><span>Nome</span></th>
+      <th width="20%"><span>E-mail</span></th>
+      <th width="20%"></th>
+      <th width="20%"></th>
+    </tr>
+
+    <!-- < @release.each do |user| %>
+      <tr>
+        <td width="20%"><span>< user.login %></span></td>
+        <td width="20%"><span>< user.name %></span></td>
+        <td width="20%"><span>< user.email %></span></td>
+        <!-- <td>< link_to 'Show', user %></td>
+        <td width="20%"><span class="centralizaBts">< link_to 'Editar', edit_user_path(user), class: "btEditarForm" %></span></td>
+        <td width="20%"><span class="centralizaBts">< link_to 'Deletar', user, method: :delete, data: { confirm: 'Are you sure?' }, class: "btVoltarExcluirForm" %></span></td>
+      </tr>
+    < end %> -->
+  </table>
+
+</div>
+
+
