--- a/app/views/financeiro/novo_pagamento.html.erb
+++ b/app/views/financeiro/novo_pagamento.html.erb
@@ -1,29 +1,61 @@
-<h1>Financeiro</h1>
-<p>Pagamento</p>
+<!-- TITLE -->
+<% content_for :title do %> Novo pagamento - Sistema Grupo Vida, Amor e Riso! <% end %>
+<!-- / TITLE -->
+
+<h1>Novo pagamento</h1>
 
 <%= form_for(@release) do |r| %>
-  <%= r.label :code %>
-  <%= r.text_field :code %><br />
+<ul>
+    <li>
+        <label>
+            <span>Codigo:</span><br/>
+            <%= r.text_field :code, :class => "inputMedio input" %>
+        </label>
+    </li>
 
-  <%= r.label :name %>
-  <%= r.text_field :name %><br />
-  
-  <%= r.label :category_id %>
-  <%= select_tag :category_id, options_for_select(@categories) %><br />
-  
-  <%= r.label :total_amount %>
-  <%= r.text_field :total_amount %><br />
-  
-  <%= r.label :number_instalments %>
-  <%= r.text_field :number_instalments %><br />
-  
-  <%= r.label :first_paid %>
-  <%= r.check_box :first_paid %><br />
-  
-  <%= r.label :fixed_payment %>
-  <%= r.check_box :fixed_payment %><br />
-  
-  <!--
+    <li>
+        <label>
+            <span>Nome:</span><br/>
+            <%= r.password_field :name, :class => "inputMedio input" %>
+        </label>
+    </li>
+
+    <li>
+        <label>
+            <span>Nome:</span><br/>
+            <%= select_tag :category_id, options_for_select(@categories), :class => 'select selectMedio' %>
+        </label>
+    </li>
+
+    <li>
+        <label>
+            <span>Valor total:</span><br/>
+            <%= r.text_field :total_amount, :class => "inputMedio input" %>
+        </label>
+    </li>
+
+    <li>
+        <label>
+            <span>Numero de parcelas:</span><br/>
+            <%= r.text_field :number_instalments, :class => "inputMedio input" %>
+        </label>
+    </li>
+
+    <li>
+        <label>
+            <%= r.check_box :first_paid %> <span>Primeira paga</span>
+        </label>
+    </li>
+
+    <li>
+        <label>
+            <%= r.check_box :fixed_payment %> <span>Pagamento fixo</span>
+        </label>
+    </li>
+
+    <li>
+      <div id="guardaResultadoPesquisa" class="parcelas">
+      <!--
   Ver como é gerado esse HTML e alterar na parcela..
 
   <input id="release_number_instalments" name="release[number_instalments]" size="30" type="text">
@@ -34,60 +66,66 @@
    Testes para gerar duas parcelas fixas, trocar por ajax + partials -->
   <% number_instalments = 3 %>
   <% # (1..number_instalments).each  ...  %>
-  <table border="1">
+  <table cellspadding="0" cellspacing="0" width="100%">
     <tr>
-      <th>No</th>
-      <th>Valor Parcela</th>
-      <th>Data de Vencimento</th>
-      <th>Data de  Pagamento</th>
-      <th>Valor Pago</th>
-      <th>Forma de Pagamento</th>
-      <th>Status</th>
+      <th width="14%"><span>No</span></th>
+      <th width="14%"><span>Valor Parcela</span></th>
+      <th width="14%"><span>Data de Vencimento</span></th>
+      <th width="14%"><span>Data de  Pagamento</span></th>
+      <th width="14%"><span>Valor Pago</span></th>
+      <th width="14%"><span>Forma de Pagamento</span></th>
+      <th width="14%"><span>Status</span></th>
     </tr>
   
   <% (1..number_instalments).each do |number_instalment| %>
     <tr>
       <%= r.fields_for :instalments do |i| %>
-        <td>
+        <td width="14%">
           <%= i.hidden_field :number, :value => number_instalment %>
-          <%= "#{number_instalment}/#{number_instalment}" %>
-        </td>
-        <td>
-          <%= i.label :amount %>
-          <%= i.text_field :amount %>
-        </td>
-        <td>
-          <%= i.label :expiration_date %>
-          <%= i.text_field :expiration_date %>
-        </td>
-        <td>
-          <%= i.label :paid_at %>
-          <%= i.text_field :paid_at %>
+          <span><%= "#{number_instalment}/#{number_instalment}" %></span>
         </td>
 
-        <td>
-          <%= i.label :amount_paid %>
-          <%= i.text_field :amount_paid %>
+        <td width="14%">
+          <span><%= i.text_field :amount, :class => "inputPeq input" %></span>
         </td>
-        <td>
-          <%= i.label :status %>
-          <%= select_tag :status_id, options_for_select(@status) %>
+        
+        <td width="14%">
+          <span><%= i.text_field :expiration_date, :class => "inputPeq input" %></span>
         </td>
-        <td>
-          <%= i.label :payment %>
-          <%= select_tag :payment_id, options_for_select(@payments) %>
+
+        <td width="14%">
+          <span><%= i.text_field :paid_at, :class => "inputPeq input" %></span>
+        </td>
+
+        <td width="14%">
+          <span><%= i.text_field :amount_paid, :class => "inputPeq input" %></span>
+        </td>
+
+        <td width="14%">
+          <span><%= select_tag :payment_id, options_for_select(@payments), :class => 'select' %></span>
+        </td>
+
+        <td width="14%">
+          <span><%= select_tag :status_id, options_for_select(@status), :class => 'select' %></span>
         </td>
       <% end %>
     </tr>
   <%  end %>
 
   </table>
+</div>
+    </li>
 
-  <%= r.label :description %>
-  <%= r.text_area :description %><br />
+    <li>
+      <label>
+        <span>Descricao</span><br/>
+        <%= r.text_area :description, :class => 'textarea textareaGde' %><br />
+      </label>
+    </li>
 
-  <%= r.submit 'Salvar Pagamento', :id => "btEnviarForm" %>
-
+    <li id="btEnviarForm">
+        <%= r.submit 'Salvar Pagamento' %>
+        <%= link_to 'Voltar', financeiro_index_path, :id => "btVoltarForm" %>
+    </li>
+</ul>
 <% end %>
-
-<%= link_to "Voltar", financeiro_index_path %>
