--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -18,13 +18,14 @@
             <%= f.text_field :login, :class => "inputMedio input" %>
         </label>
     </li>
-
+<!-- decidir o q fazer com isso -->
     <li>
         <label>
             <span>Password:</span><br/>
             <%= f.password_field :password, :class => "inputMedio input" %>
         </label>
     </li>
+<!-- -->
 
     <li>
         <label>
@@ -56,7 +57,7 @@
 
     <li id="btEnviarForm">
         <%= f.submit %>
-        <%= link_to 'Voltar', users_path, :id => "btVoltarForm" %>
+        <%= link_to 'Voltar', dashboard_path, :id => "btVoltarForm" %>
     </li>
 </ul>
 <% end %>
